// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validators utils deve retornar um token quando o usuario logar 1`] = `
Object {
  "data": Object {
    "token": "122.123.123",
  },
  "errors": null,
}
`;

exports[`Validators utils deve retornar um usuario quando o usuario se registrar: email 1`] = `
Object {
  "data": Object {
    "email": "vanessaca@email.com.br",
    "name": "Vanessa Almeida C",
    "password": "1234",
  },
  "errors": null,
}
`;
